<resources>
    <string name="app_name">EventHub</string>
    <string name="Title">EventHub</string>
    <string name="signup">SIGN uP</string>
    <string name="skip">Skip if you are a user</string>
    <string name="login">LOGIN</string>


    <string name="add1">13/5, Town road, Kandy.</string>
    <string name="des1">Large Scale ,Wedding and Private Parties</string>
    <string name="add2">13/5, Galle road, Colombo.</string>
    <string name="des2">Wedding and Private Parties</string>
    <string name="welcome">Welcome!</string>
    <string name="tagline">Create your business account in minutes</string>
    <string name="logintag">Already have an account?</string>
    <string name="login2">Login</string>
    <string name="email">Type the email</string>
    <string name="wel_back">Welcome Back!</string>
    <string name="pwd">Type your password</string>
    <string name="pwd2">Re-type the password</string>
    <string name="logintag2">Log into your account</string>
    <string name="signuptag">Don\'t you have a account?</string>
    <string name="signup2">SignUp</string>
    <string name="title_activity_sidebar">sidebar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    //zihara
    <string name="cattitle">Catering Services</string>
    <string name="formtitle">MY PROFILE</string>
    <string name="comname">Enter Company name</string>
    <string name="man_name">Manager\'s Name</string>
    <string name="manname">Enter Manager\'s name</string>
    <string name="com_name">Company Name</string>
    <string name="man_num">Manager\'s Phone Number</string>
    <string name="mannum">Enter Manager\'s phone number</string>
    <string name="land_num">Office Landline Number</string>
    <string name="landnum">Enter office landline number</string>
    <string name="off_address">Office Address</string>
    <string name="offaddress">Enter office address</string>
    <string name="cat_type">Catering Type</string>
    <string name="d_method">Delivery Method</string>
    <string name="proceed">PROCEED</string>
    <string name="com_logo">Add Company Logo</string>
    <string name="location">Location</string>
    <string name="descrptn">Type your description</string>
    <string name="time01">Select open time</string>
    <string name="time2">Select close time</string>
    <string name="loca">Type The Location</string>
    <string name="update">Change</string>
    <string name="week">Select Open Days</string>
    <string name="music">Music</string>
    <string name="calculator">Calculator</string>
    <string name="venue">Venue</string>
    <string name="about_us">About Us</string>
    <string name="photography">Photography</string>
    <string name="catering">Catering</string>
    <string name="todo">TODO</string>

    <string-array name="catertype">
        <item>Select the catering type</item>
        <item>On-premise</item>
        <item>Off-premise</item>
    </string-array>
    <string-array name="delivertype">
        <item>Select the delivery type</item>
        <item>Pick Up</item>
        <item>Delivery</item>
    </string-array>

    //Abineshh

    <string name="musictitle">Musical Bands</string>
    <string name="muformtit"><![CDATA[Music & Band Details]]></string>
    <string name="bandname">Enter Band\'s Name</string>
    <string name="entoffmail">Enter office email</string>
    <string name="create">create</string>
</resources>