<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".caterupdate"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="30dp">

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="149dp"
            android:layout_height="48dp"
            android:layout_marginEnd="101dp"
            android:layout_marginRight="101dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView30"
            tools:ignore="SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="149dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="101dp"
            android:layout_marginRight="101dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ct_address"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:text="@string/cat_type"
            app:layout_constraintBottom_toBottomOf="@+id/spinner3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinner3" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="39dp"
            android:text="@string/d_method"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView29" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Update the details"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ct_managename"
            android:layout_width="281dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/manname"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ct_compname" />

        <EditText
            android:id="@+id/ct_phnnum"
            android:layout_width="281dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/mannum"
            android:inputType="phone"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ct_managename" />

        <EditText
            android:id="@+id/ct_ofnum"
            android:layout_width="291dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/landnum"
            android:inputType="phone"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.541"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ct_phnnum" />

        <EditText
            android:id="@+id/ct_address"
            android:layout_width="290dp"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/offaddress"
            android:inputType="textPostalAddress"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.537"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ct_ofnum" />

        <EditText
            android:id="@+id/et_loca"
            android:layout_width="281dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/loca"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_cttime2" />

        <ImageView
            android:id="@+id/et_imgView"
            android:layout_width="119dp"
            android:layout_height="111dp"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner4" />

        <ImageView
            android:id="@+id/et_chooseimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            app:layout_constraintStart_toEndOf="@+id/et_imgView"
            app:layout_constraintTop_toBottomOf="@+id/et_imgView"
            app:srcCompat="@drawable/addimage" />

        <EditText
            android:id="@+id/ct_compname"
            android:layout_width="281dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/comname"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/et_cttime1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/time01"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_chooseimg" />

        <TextView
            android:id="@+id/et_cttime2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/time2"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_cttime1" />

        <EditText
            android:id="@+id/et_des"
            android:layout_width="281dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/descrptn"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_loca"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/ct_updatebtn"
            android:layout_width="121dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_corner"
            android:onClick="updFile"
            android:text="update"
            app:backgroundTint="@color/butn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_des" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
